# ArcadeLauncher-Unified-Client

./: .gitignore  AGENT_MEMORY.md  ARCHITECTURE.md  CHANGELOG.md  FEATURES.md  HANDOFF.md  PARITY.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: android.yml  ci.yml  discord-changelog.yml  release.yml
docs/: ARCHITECTURE.md  FEATURES.md  HANDOFF.md  ROADMAP.md  architecture.html
mobile/: App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
mobile/plugins/: releaseSigning.js  releaseSigning.test.ts  withReleaseSigning.js  withReleaseSigning.test.ts
mobile/src/: api.ts  gateway.ts  storage.ts  theme.ts  useCall.ts
mobile/src/core/: attach.test.ts  attach.ts  call.test.ts  call.ts  catalog.test.ts  catalog.ts  crypto.test.ts  crypto.ts  friends.test.ts  friends.ts  guard.test.ts  guard.ts  requests.test.ts  requests.ts  roster.test.ts  roster.ts  session.test.ts  session.ts  social.test.ts  social.ts
mobile/src/screens/: CallOverlay.tsx  ChatScreen.tsx  GuardPrompt.tsx  InstallSheet.tsx  LibraryScreen.tsx  RequestsScreen.tsx  SignInScreen.tsx
packaging/: README.md
packaging/arch/: .SRCINFO  PKGBUILD  arcadelauncher.desktop
scripts/: memory.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.engine-bundle-linux.conf.json  tauri.engine-bundle.conf.json
src-tauri/binaries/: .gitignore
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: error.rs  lib.rs  main.rs  proc.rs
src-tauri/src/catalog/: art.rs  art_commands.rs  commands.rs  loader.rs  mod.rs  model.rs  prefs.rs  prefs_commands.rs  sessions.rs  sessions_commands.rs
src-tauri/src/controller/: bios.rs  commands.rs  ini.rs  mod.rs  model.rs  serializers.rs
src-tauri/src/download/: commands.rs  endpoint.rs  engine.rs  extract.rs  manifest.rs  migrate.rs  mod.rs  paths.rs  queue.rs  rate.rs  records.rs  verify.rs
src-tauri/src/emulators/: commands.rs  firmware.rs  launch.rs  mod.rs  unpack.rs
src-tauri/src/hotkey/: commands.rs  mod.rs  register.rs  shortcut.rs
src-tauri/src/launch/: commands.rs  hooks.rs  mod.rs  runner.rs  session.rs  target.rs
src-tauri/src/presence/: activity.rs  client.rs  commands.rs  mod.rs
src-tauri/src/requests/: api.rs  commands.rs  mod.rs
src-tauri/src/retroachievements/: api.rs  commands.rs  mod.rs
src-tauri/src/saves/: commands.rs  mod.rs  paths.rs  scan.rs  sync.rs  versions.rs
src-tauri/src/session/: commands.rs  crypto.rs  mod.rs  storage.rs  store.rs
src-tauri/src/settings/: commands.rs  mod.rs  model.rs  store.rs
src-tauri/src/social/: attach.rs  backoff.rs  commands.rs  device.rs  endpoint.rs  mod.rs  model.rs  protocol.rs  transport.rs
src-tauri/src/stores/: commands.rs  epic.rs  mod.rs  steam.rs
src-tauri/src/streaming/: commands.rs  control.rs  engine.rs  engine_conn.rs  engine_session.rs  host.rs  host_fetch.rs  host_fetch_commands.rs  host_pref.rs  host_session.rs  mod.rs  moonlight.rs  mypcs.rs  mypcs_commands.rs  play.rs  settings.rs  store.rs
src-tauri/src/streaming/mesh/: conn.rs  control.rs  mod.rs  preauth.rs
src-tauri/src/tray/: behavior.rs  mod.rs  setup.rs
src-tauri/src/window/: commands.rs  mod.rs
src-tauri/updater/: Cargo.toml  build.rs  updater.manifest
src-tauri/updater/src/: instance.rs  main.rs  update.rs
src-tauri/wix/: main.wxs
src/app/: AppShell.tsx  views.test.ts  views.ts
src/features/arcadestore/: ArcadeStoreView.tsx  LibraryToggle.tsx  StoreCapsule.tsx  StoreDetail.tsx  StoreFeatured.tsx  cover.ts
src/features/catalog/: CatalogView.tsx  api.ts  prefs.test.ts  prefs.ts  query.test.ts  query.ts  recap.test.ts  recap.ts  stats.test.ts  stats.ts  types.ts  useCatalog.ts  useCatalogPrefs.ts  useOwnership.ts  variants.test.ts  variants.ts
src/features/controller/: EmulatorControllerEditor.tsx  api.ts  profile.test.ts  profile.ts
src/features/download/: api.ts  installState.test.ts  installState.ts  reducer.test.ts  reducer.ts  selectors.test.ts  selectors.ts  titles.test.ts  titles.ts  types.ts  useDownloads.ts  useInstallOverlay.ts
src/features/emulators/: api.ts  useEmulators.ts
src/features/gamepad/: ControllerConfigContext.tsx  ControllerHints.tsx  api.ts  input.test.ts  input.ts  navigate.test.ts  navigate.ts  useGamepad.ts  useGamepadConnected.ts  useWindowFocused.ts
src/features/help/: ShortcutsHelp.tsx  shortcuts.test.ts  shortcuts.ts
src/features/onboarding/: OnboardingOverlay.tsx  api.ts  onboarding.test.ts  onboarding.ts  useOnboarding.ts
src/features/presence/: api.ts
src/features/requests/: RequestsView.tsx  api.ts  requests.test.ts  requests.ts  useRequests.ts
src/features/retroachievements/: api.ts  ra.test.ts  ra.ts
src/features/saves/: api.ts  saves.test.ts  saves.ts
src/features/session/: ForgotPanel.tsx  LoginPanel.tsx  RegisterPanel.tsx  SessionContext.tsx  api.ts  types.ts
src/features/settings/: SettingsView.tsx  api.ts  types.ts  useSettings.ts
src/features/social/: GlobalGameInviteToasts.tsx  SocialContext.tsx  SocialView.tsx  activity.ts  api.ts  demoGateway.ts  friendMeta.test.ts  friendMeta.ts  gateway.ts  invites.test.ts  invites.ts  privacy.test.ts  privacy.ts  profile.test.ts  profile.ts  protocol.test.ts  protocol.ts  reducer.test.ts  reducer.ts  remoteInstall.test.ts  remoteInstall.ts  roomChat.test.ts  roomChat.ts  rooms.test.ts  rooms.ts  selectors.test.ts  selectors.ts  statusMenu.test.ts  statusMenu.ts  types.ts  useActivity.ts  useFriendMeta.ts  useGroupVoice.ts  usePrivacy.ts  useProfile.ts  useRemoteInstall.ts  useSocial.ts  useUserSearch.ts  useVoice.ts  video.test.ts  (+6 more)
src/features/stores/: StoreView.tsx  api.ts
src/features/streaming/: HostEngineInstall.tsx  HostingSection.tsx  MyPcsView.tsx  StreamFromHost.tsx  StreamingSection.tsx  api.ts  certAuth.ts  streaming.test.ts  streaming.ts  useHosting.ts  useMyPcs.ts  usePresenceHeartbeat.ts  useStreaming.ts
src/features/theme/: ThemeSettings.tsx  theme.test.ts  theme.ts  useTheme.ts
src/features/updater/: useUpdater.ts  (+1 more)
src/lib/: ipc.ts
src/styles/: global.css
(+29 files in other folders)
