[package]
name = "arcade_launcher"
version = "0.10.13"
description = "ArcadeLauncher Unified Client"
authors = ["TheStonedGamer"]
edition = "2021"

# The Steam-style bootstrap updater (updater.exe) is a sibling crate in this
# workspace so it builds from the same `cargo`/CI invocation and shares the
# target dir. It is bundled alongside the app and runs before it (see updater/).
[workspace]
members = ["updater"]

[lib]
# `_lib` suffix keeps the lib name distinct from the bin (Windows linker quirk).
name = "arcade_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Social live transport (T3b). rustls (not native-tls) so there is no OpenSSL
# system dependency — keeps the Windows + Linux CI build identical and simple.
tokio = { version = "1", features = ["sync", "time", "macros"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
sha2 = "0.10"
# Challenge-response auth crypto (session layer): HMAC proof + HMAC-CTR token
# decrypt, mirroring the server's auth.rs exactly. hex for wire encoding.
hmac = "0.12"
hex = "0.4"

# Cloud saves (T8): set a downloaded save file's mtime to the server's, so the
# next sync sees it as in-sync instead of re-uploading. Pure-Rust, cross-platform,
# no system deps — keeps Windows + Linux identical.
filetime = "0.2"

# Archive extraction for pc_archive installs (T4c). Pure-Rust deflate only (no
# bzip2/zstd system deps) so the Windows + Linux CI build stays identical.
zip = { version = "2", default-features = false, features = ["deflate"] }

# 7-Zip extraction for emulator runtimes shipped as .7z (Dolphin, RPCS3, PCSX2).
# Pure-Rust LZMA/LZMA2 decoder — no system deps, identical on both CI runners.
sevenz-rust = "0.6"

# Discord Rich Presence (T7a). Pure-Rust IPC over the local Discord socket
# (unix socket on Linux, named pipe on Windows) — no system deps, identical on
# both CI runners. Presence is best-effort and gated by a setting.
discord-rich-presence = "0.2"
tauri-plugin-dialog = "2"

# Desktop-only plugins (not built for mobile targets).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Global hotkey to summon/hide the launcher (T7b). Desktop-only.
tauri-plugin-global-shortcut = "2"
# Single-instance guard: only one launcher window per machine. The launcher
# auto-updates + lives in the tray, so a second launch must surface the running
# window, not spawn a duplicate. Official pure-Rust Tauri plugin (no system
# deps; identical on Windows + Linux). Desktop-only.
tauri-plugin-single-instance = "2"
